--- a/project_code.ipynb
+++ b/project_code.ipynb
@@ -1,6 +1,37 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c357fd3-279f-4a94-ada2-4c68ff8c0d30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Adding a jupyter notebook\n",
+    "\n",
+    "## Edit the code in this notebook"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.10"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
